init cattel branch with yarn start:worker:plus

--- a/packages/tracker/docker-compose.yml
+++ b/packages/tracker/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   postgres:
     image: postgres:16
@@ -12,14 +14,25 @@ services:
       - "5432:5432"
     volumes:
       - ./docker/pgdata:/var/lib/postgresql/data
+    user: "${UID}:${GID}"
+    command: ["postgres", "-c", "listen_addresses=*"]
+
   bitcoind:
     image: fractalbitcoin/fractal:v0.2.1
     restart: always
-    entrypoint: ["bitcoind", "-datadir=/data/"]
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        rm -f /data/.lock
+        bitcoind -datadir=/data/
     healthcheck:
       test: ["CMD", "bitcoin-cli", "-datadir=/data/", "getblockchaininfo"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     ports:
       - "8332:8332"
       - "8333:8333"
     volumes:
       - ./docker/data:/data
+    user: "${UID}:${GID}"
