--- a/packages/tracker/tsconfig.json
+++ b/packages/tracker/tsconfig.json
@@ -14,8 +14,11 @@
     "skipLibCheck": true,
     "strictNullChecks": false,
     "noImplicitAny": false,
-    "strictBindCallApply": true,
+    "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "lib": ["ES2021"],
+    "types": ["node"],
+    "esModuleInterop": true
   }
 }
