--- a/packages/tracker/package.json
+++ b/packages/tracker/package.json
@@ -8,22 +8,19 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-
     "start:worker": "nest start -c nest-cli-worker.json",
     "start:worker:dev": "nest start --watch -c nest-cli-worker.json",
     "start:worker:debug": "nest start --debug --watch -c nest-cli-worker.json",
     "start:worker:prod": "yarn build && node dist/main-worker",
-
+    "start:worker:prod:plus": "yarn build && node --max-old-space-size=180000 --max-semi-space-size=4096 --nouse-idle-notification dist/main-worker.js 2> error.log",
     "start:api": "nest start -c nest-cli-api.json",
     "start:api:dev": "nest start --watch -c nest-cli-api.json",
     "start:api:debug": "nest start --debug --watch -c nest-cli-api.json",
     "start:api:prod": "yarn build && node dist/main-api",
-
     "typeorm": "npx typeorm-ts-node-commonjs -d src/config/db.config.ts",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert",
-
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -57,7 +54,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^22.7.4",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
