--- a/packages/tracker/.env.example
+++ b/packages/tracker/.env.example
@@ -1,3 +1,4 @@
+# Database Configuration
 DATABASE_TYPE=postgres
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=5432
@@ -5,12 +6,32 @@ DATABASE_DB=postgres
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
 
+# Bitcoin RPC Configuration
 RPC_HOST=127.0.0.1
 RPC_PORT=8332
 RPC_USER=bitcoin
 RPC_PASSWORD=opcatAwesome
 
+# Network Configuration
 NETWORK=mainnet
+
+# API Configuration
 API_PORT=3000
+
+# Worker Configuration
 WORKER_PORT=3001
-GENESIS_BLOCK_HEIGHT=0 # the height of block that CAT protocol launches
+WORKER_CONCURRENCY=4  # Number of concurrent worker processes, adjust based on available CPU cores
+
+# Sync Configuration
+GENESIS_BLOCK_HEIGHT=0  # The height of block that CAT protocol launches
+BATCH_SIZE=1000  # Number of transactions to process in a batch
+SYNC_INTERVAL=10000  # Interval (in milliseconds) between sync attempts
+
+# Database Performance Tuning
+TYPEORM_CONNECTION_LIMIT=100  # Maximum number of database connections
+TYPEORM_QUERY_TIMEOUT=60000  # Timeout (in milliseconds) for database queries
+
+# Docker User Configuration
+# Replace these with your system's UID and GID
+UID=1000
+GID=1000
