--- a/packages/tracker/docker-compose.yml
+++ b/packages/tracker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:16
+    image: postgres
     shm_size: 1g
     restart: always
     environment:
